--- a/build.gradle
+++ b/build.gradle
@@ -88,16 +88,6 @@ configurations {
 	}
 }
 
-repositories {
-	maven {
-		name = 'Mojang'
-		url = 'https://libraries.minecraft.net/'
-		content {
-			includeGroup "net.minecraft"
-		}
-	}
-}
-
 
 dependencies {
 	// fabric-loader dependencies
@@ -107,7 +97,6 @@ dependencies {
 	installer "org.ow2.asm:asm-tree:${project.asm_version}"
 	installer "org.ow2.asm:asm-util:${project.asm_version}"
 	installer "net.fabricmc:sponge-mixin:${project.mixin_version}"
-	installerLaunchWrapper "net.minecraft:launchwrapper:1.12"
 
 	// impl dependencies
 	include 'org.ow2.sat4j:org.ow2.sat4j.core:2.3.6'
@@ -185,7 +174,7 @@ tasks.register('getSat4jAbout', Copy) {
 tasks.register('fatJar', ShadowJar) {
 	dependsOn getSat4jAbout
 	from sourceSets.main.output
-	from project(":minecraft").sourceSets.main.output
+	from project(":aoh3").sourceSets.main.output
 	from getSat4jAbout.destinationDir
 	from("LICENSE") {
 		rename { "${it}_${project.base.archivesName.get()}" }
@@ -193,7 +182,7 @@ tasks.register('fatJar', ShadowJar) {
 
 	manifest {
 		attributes(
-			'Main-Class': 'net.fabricmc.loader.impl.launch.server.FabricServerLauncher',
+			'Main-Class': 'net.fabricmc.loader.impl.launch.knot.KnotClient',
 			'Fabric-Loom-Remap': 'false',
 			'Automatic-Module-Name': 'net.fabricmc.loader',
 			'Multi-Release': 'true'
@@ -227,7 +216,7 @@ import proguard.gradle.ProGuardTask
 
 tasks.register('proguardJar', ProGuardTask) {
 	dependsOn fatJar
-	def classpath = project(":minecraft").configurations.compileClasspath
+	def classpath = project(":aoh3").configurations.compileClasspath
 
 	inputs.files(fatJar, classpath)
 	outputs.files(proguardTmpFile)
@@ -269,7 +258,7 @@ tasks.withType(AbstractArchiveTask) {
 
 sourcesJar {
 	from sourceSets.main.allSource
-	from project(":minecraft").sourceSets.main.allSource
+	from project(":aoh3").sourceSets.main.allSource
 }
 
 // useful for creating test mod jar
